@@ -2,6 +2,8 @@
 --- current version
 New method "ifel", that is, ifelse for Raster objects (this is the R implementation of the arcpy "Con" method)
 
+Changes to argument names of "shift" for consistency
+
 Bug fixes: 
 netcdf writing for multi-layer objects was no working. Reported by Philipp Buehler https://github.com/rspatial/raster/issues/53
 
